Add create collection

--- a/workshop/install/docker-compose.yml
+++ b/workshop/install/docker-compose.yml
@@ -60,8 +60,8 @@ services:
     image: qdrant/qdrant:latest
     restart: always
     ports:
-      - "6333:6333"
-      - "6334:6334"
+      - "6333:6333" # Qdrant HTTP API
+      - "6334:6334" # Qdrant GRPC API
     # env_file:
     #   - .env
     volumes:
