--- a/workshop/install/docker-compose.yml
+++ b/workshop/install/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - N8N_LOG_FILE_COMPRESSION=true
       - N8N_METRICS=true
       - QUEUE_HEALTH_CHECK_ACTIVE=true
+      - N8N_SECURE_COOKIE=false
     command: start --tunnel
     volumes:
       - ./datas/n8n:/home/node/.n8n
